place schedule elements absolute on calulated positions, fixes wrap-around bug

--- a/assets/css/_schedule.less
+++ b/assets/css/_schedule.less
@@ -10,6 +10,8 @@
 
 	.room {
 		overflow: hidden;
+		position: relative;
+		height: 100px;
 	}
 
 	.now {
@@ -32,7 +34,8 @@
 
 	.block {
 		overflow: hidden;
-		float: left;
+		position: absolute;
+		top: 0;
 		height: 100px;
 
 		/* and now for small screens: */
